@@ -5,6 +5,9 @@
 
 * Added a missing tooltip for 'New Window' toolbar button.
 
+* Fixed an issue when single instance socket' directory did not exist (see
+    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=874753).
+
 
 Changes on 1.2.5 since 1.2.4:
 
